# ancle

./: AUTHORS  Doxyfile  Makefile  Makefile.in  README  anclerc  configure  configure.ac  makefile
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/html/: ancle_8c.html  ancle_8c__incl.map  ancle_8c__incl.md5  ancle_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  ancle_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  ancle_8c_source.html  ancle_8h.html  ancle_8h__dep__incl.map  ancle_8h__dep__incl.md5  ancle_8h__incl.map  ancle_8h__incl.md5  ancle_8h_a0ea5ed437e02e57952c2302ba96adce0_cgraph.map  ancle_8h_a0ea5ed437e02e57952c2302ba96adce0_cgraph.md5  ancle_8h_a1c9c9a63964a0d0f06e35ce4cba3006d_cgraph.md5  ancle_8h_a2ff61ace0f1a1cc1f7264758b5628152_cgraph.map  ancle_8h_a2ff61ace0f1a1cc1f7264758b5628152_cgraph.md5  ancle_8h_aa41a6f9e907badaf2f5e79a4873b100d_cgraph.map  ancle_8h_ab45638d882a6836701b6afc3afa64c83_cgraph.md5  ancle_8h_ad8651923e11cb43708fd39c49eebdf0a_cgraph.map  ancle_8h_ad8651923e11cb43708fd39c49eebdf0a_cgraph.md5  ancle_8h_ae4dfd1828415dc5cd6480501dc30cebb_cgraph.map  ancle_8h_afd2f9995728ed462a9e6c694a724eea8_cgraph.md5  ancle_8h_source.html  annotated.html  callcurl_8c.html  callcurl_8c__incl.map  callcurl_8c__incl.md5  (+75 more)
src/: Doxyfile  Makefile  Makefile.am  Makefile.in  ancle.c  ancle.h  callcurl.c  config.c  config.h.in  createdoc.c  getdevices.c  mainpage.dox  makefile  output.xml  parse.c  parseResponse.c  savelast.c  searchdev.c  searchreq.c  soapenv.c  soapreq.c  soapreqtest.c  soaptest.c  test.c  testWriter.c  writer1.xml  xparse.c
(+98 files in other folders)
